--- a/src/app/nav/nav.component.html
+++ b/src/app/nav/nav.component.html
@@ -1,7 +1,7 @@
 <div class="navTitle">
   <nav>
-    <a routerLink="/unfinished" [class.selectedNav]="selected === 'unfinished'" (click)="selectNav('unfinished')">未完成任务列表</a>
-    <a routerLink="/completed" [class.selectedNav]="selected === 'completed'" (click)="selectNav('completed')">已完成任务列表</a>
+    <a routerLink="/unfinished" [class.selectedNav]="selected === 'unfinished'" (click)="selectNav('unfinished')">未完成任务</a>
+    <a routerLink="/completed" [class.selectedNav]="selected === 'completed'" (click)="selectNav('completed')">已完成任务</a>
     <a routerLink="/add"  [class.selectedNav]="selected === 'add'" (click)="selectNav('add')">新增任务</a>
   </nav>
 </div>
