--- a/src/app/nav/nav.component.html
+++ b/src/app/nav/nav.component.html
@@ -3,6 +3,7 @@
     <a routerLink="/unfinished" [class.selectedNav]="selected === 'unfinished'" (click)="selectNav('unfinished')">未完成任务</a>
     <a routerLink="/completed" [class.selectedNav]="selected === 'completed'" (click)="selectNav('completed')">已完成任务</a>
     <a routerLink="/add"  [class.selectedNav]="selected === 'add'" (click)="selectNav('add')">新增任务</a>
+    <a routerLink="/dialog"  [class.selectedNav]="selected === 'dialog'" (click)="selectNav('dialog')">dialog</a>
   </nav>
 </div>
 
