--- a/src/app/task-list/task-list.component.html
+++ b/src/app/task-list/task-list.component.html
@@ -14,4 +14,4 @@
 <div *ngIf="taskList && taskList.length == 0">
   <img src="/assets/noFind.png" alt="">
 </div>
-<app-dialog [tipDialog_config]="tipDialog"></app-dialog>
+<!--<app-dialog [tipDialog_config]="tipDialog"></app-dialog>-->
