--- a/src/app/dialog/dialog.component.html
+++ b/src/app/dialog/dialog.component.html
@@ -1,12 +1,68 @@
-<div class="tip_dialog">
-  <div class="title">
-    <span>{{tipDialog_config.title}}</span>
-    <span class="close_dialog">X</span>
-  </div>
-  <div class="content">{{tipDialog_config.content}}</div>
-  <div class="dialog_button">
-    <button class="ui-button-error dialog_save"   pButton (click)="doSave()" label="确定" ></button>
-    <button class="ui-button-info dialog_cancel" *ngIf="tipDialog_config.CANCEL == true"  pButton (click)=" doCancel()" label="取消"></button>
-  </div>
-</div>
+<popup #popup1>
+  Add your custom html elements here
+  <br>
+</popup>
 
+<popup #popup2>
+  Add your custom html elements here
+  <br>
+</popup>
+
+<popup #popup3>
+  <p>You can change your animations by setting this.popup.option</p>
+
+  <div>
+    'fadeInLeft'
+    'fadeInRight',
+    'fadeInUp',
+    'bounceIn',
+    'bounceInDown'
+  </div>
+  <br>
+</popup>
+
+<popup #popup4 (confirmClick)="YourConfirmEvent()">
+  You can subscribe to the confirm and cancel button event, or you can hide the buttons and add your own.
+  <br>
+  <br>
+  <p>(confirmClick)="YourConfirmEvent()" </p>
+  <p>(cancelClick)="YourCancelEvent()" </p>
+
+  <br>
+</popup>
+<popup #popup5 (confirmClick)="login()">
+  <form class="form-horizontal">
+    <div class="form-group">
+      <label for="inputEmai3" class="col-sm-3 control-label">Email</label>
+      <div class="col-sm-7">
+        <input type="text" class="form-control" name="email" [(ngModel)]="email" id="email" placeholder="email">
+      </div>
+    </div>
+    <div class="form-group">
+      <label for="inputEmai3" class="col-sm-3 control-label">Password</label>
+      <div class="col-sm-7">
+        <input type="password" class="form-control" name="password" [(ngModel)]="password" id="password" placeholder="password">
+      </div>
+    </div>
+    <div class="form-group">
+      <div class="form-group text-right">
+        <div class="col-sm-offset-3 col-sm-7">
+          <div class="checkbox">
+            <label>
+              <input type="checkbox" id="RequireLogin" name="RequireLogin"> Remember Me
+            </label>
+          </div>
+        </div>
+      </div>
+    </div>
+
+  </form>
+</popup>
+
+<div class="row">
+  <button class="btn btn-mbe-normal sp" (click)="showPopup1()">Simple popup</button>
+  <button class="btn btn-mbe-normal sp" (click)="showPopup2()">Size & Color</button>
+  <button class="btn btn-mbe-normal sp" (click)="showPopup3()">Animations</button>
+  <button class="btn btn-mbe-normal sp" (click)="showPopup4()">Events</button>
+  <button class="btn btn-mbe-normal sp" (click)="showPopup5()">Forms sample</button>
+</div>
