--- a/src/app/nav/nav.component.html
+++ b/src/app/nav/nav.component.html
@@ -4,6 +4,8 @@
     <a routerLink="/completed" [class.selectedNav]="selected === 'completed'" (click)="selectNav('completed')">已完成任务</a>
     <a routerLink="/add"  [class.selectedNav]="selected === 'add'" (click)="selectNav('add')">新增任务</a>
     <a routerLink="/dialog"  [class.selectedNav]="selected === 'dialog'" (click)="selectNav('dialog')">dialog</a>
+    <a routerLink="/grid"  [class.selectedNav]="selected === 'grid'" (click)="selectNav('grid')">Grid</a>
+
   </nav>
 </div>
 
